Fix menu overflow not scrolling

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -567,6 +567,7 @@ a {
 
 #main-menu.on {
   height: 100%;
+  overflow: auto;
 }
 
 #menu-inner {
@@ -599,7 +600,7 @@ a {
 }
 
 #menu-list {
-  padding: 0;
+  padding: 73px 0;
   margin: 0 auto;
   max-width: 450px;
   list-style: none;
